Scrollable modals (Fixes an overflowing bug for IE)

--- a/src/widgets/modal/modal.scss
+++ b/src/widgets/modal/modal.scss
@@ -8,8 +8,6 @@
  * @require decorators/z_depths/z_depths.scss
  * ========================================================================= */
 
-//FIXME: The demo modal: `Long content` is not working good on iPod's Safari
-
 /* MODAL */
 
 .modal {
@@ -17,8 +15,10 @@
   @include z-depth ( $modal-z-depth, $modal-z-depth-force, $modal-z-depth-basic );
   position: fixed;
   z-index: $modal-z-index;
-  margin: 0;
+  overflow: auto;
   max-width: $modal-max-width;
+  max-height: $modal-max-height;
+  margin: 0;
   transition-property: transform, opacity;
   transition-duration: $modal-animation-duration;
 }
